--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.3",
+    "gsap": "^3.12.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.5.3"
+    "react-intersection-observer": "^9.5.3",
+    "react-responsive-carousel": "^3.2.23",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
